--- a/.gitignore
+++ b/.gitignore
@@ -48,18 +48,18 @@ ExportedObj/
 *.VC.db
 
 # Unity3D generated meta files
-*.pidb.meta
-*.pdb.meta
-*.mdb.meta
+.pidb.meta
+.pdb.meta
+.mdb.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
 
 # Builds
-*.apk
-*.aab
-*.unitypackage
-*.app
+.apk
+.aab
+.unitypackage
+.app
 
 # Crashlytics generated file
 crashlytics-build.properties
